# TRUI1

./: CMakeLists.txt
data/: converted_test_data1.csv
include/: TimeConverter.h  TsvHandler.h
src/: TimeConverter.cpp  TsvHandler.cpp  main.cpp
